<resources>
    <string name="app_name">EKK</string>
    <string name="login">LOG IN</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="bio">Bio</string>
    <string name="privateinfo">Private Information</string>
    <string name="location">Location</string>
    <string name="emailaddress">E-mail Address</string>
    <string name="phonenumber">Phone Number</string>
    <string name="privateinformation">Private Information</string>
    <string name="gender">Gender</string>
    <string name="no_account">No account yet? <b>Sign Up</b></string>
    <string name="forgot">Forgot your login detail?</string>
    <string name="login_google">Log in with Google </string>
    <string name="or"> <b>OR</b></string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="reenter">Reenter Password</string>
    <string name="have_account">Already have account? <b>Sign In</b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_name_here">your name here</string>
    <string name="your_city_here">your city here</string>
    <string name="change_photo">Change Photo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="daftar_pegawai">Daftar Pegawai</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_admin">AdminActivity</string>


    <string-array name="array_name">
        <item>Admin</item>
        <item>Marketing</item>
        <item>Manager</item>
    </string-array>

    <string-array name="jenis_jual">
        <item>Rumah</item>
        <item>Mobil</item>
        <item>Motor</item>
    </string-array>

    <string-array name="durasi">
        <item>hari</item>
        <item>minggu</item>
        <item>bulan</item>
        <item>tahun</item>
    </string-array>

    <string name="title_activity_manager">ManagerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
