<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/GeneralAppTheme"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"

        android:theme="@style/GeneralAppTheme">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:weightSum="100"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nameRegText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/name" />


                <EditText
                    android:id="@+id/emailRegText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />

                <EditText
                    android:id="@+id/passwordRegText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

                <EditText
                    android:id="@+id/passwordRegRetypeText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="Retype Password" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20" />

                <Button
                    android:id="@+id/regButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:layout_below="@+id/passwordReInputLayoutReg"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/blue"
                    android:onClick="regButton_Click"
                    android:text="@string/sign_up" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

                <TextView
                    android:id="@+id/haveAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:onClick="loginButton_Click"
                    android:text="@string/have_account"
                    android:textColor="@color/darkGrey"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarReg"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true" />


</RelativeLayout>




