<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/GeneralAppTheme"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_atas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="8dp"
        android:weightSum="100"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/app_name"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/logodark2" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/fontSize" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="@dimen/fontSize" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"

            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/blue"
            android:onClick="buttonLogin_Click"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/forgotLogin"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"/>

        <TextView
            android:id="@+id/forgotLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/darkGrey"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/link_signup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/reenter"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />

            <Space
                android:layout_width="5dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:foregroundGravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/loginGoogleButton"
                android:layout_weight="20"
                android:gravity="center"
                android:text="@string/login_google"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:textColor="@color/darkGrey"
        android:text="@string/no_account"
        android:textSize="16sp" />


</RelativeLayout>
