<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarProfileSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:title="Setting"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkerWhite"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkerWhite"
            android:orientation="vertical"
            android:padding="12dp"
            android:weightSum="120">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile_setting2"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:src="@drawable/user_management"
                app:civ_border_color="@color/darkGrey"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/text_change_photo_setting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/marginTextInput"
                android:layout_weight="1"
                android:paddingTop="3dp"
                android:text="@string/change_photo"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="18sp" />





            <android.support.design.widget.TextInputLayout

                android:id="@+id/layoutID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/textIDSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Nomor ID"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/fontSize" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout

                android:id="@+id/layout_name_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/textNameSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/name"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/fontSize" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:id="@+id/layout_location_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/textPasswordSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/fontSize" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_bio_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <EditText
                    android:id="@+id/textReenterSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/reenter"
                    android:inputType="textPassword"
                    android:textSize="@dimen/fontSize" />
            </android.support.design.widget.TextInputLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorGrey">
            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />
            <Button
                android:id="@+id/buttonSubmitSetting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Submit" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
