<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="100"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.esoft.ekk.ActivityUser.AdminActivity"
    tools:showIn="@layout/app_bar_admin">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:id="@+id/imageViewAdd"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:padding="2dp"
                app:srcCompat="@drawable/register_user" />

            <TextView
                android:id="@+id/textViewAdd"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center"
                android:text="@string/tambah_pegawai" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:id="@+id/imageViewUser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:padding="2dp"
                app:srcCompat="@drawable/user_management" />

            <TextView
                android:id="@+id/textViewUser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center"
                android:text="@string/daftar_pegawai" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:id="@+id/imageViewSettingAdmin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:padding="2dp"
                app:srcCompat="@drawable/setting" />

            <TextView
                android:id="@+id/textViewSetting"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center"
                android:text="@string/action_settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:id="@+id/imageViewOutAdmin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:padding="2dp"
                app:srcCompat="@drawable/out" />

            <TextView
                android:id="@+id/textViewUsers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center"
                android:text="Keluar" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
